=================================
 Changelog
=================================

4/3/2016. changed --- to === cause it's prettier (RCichota)
8/3/2016. Test